2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-article-mark-lists): Remove `recent'.

	* gnus-art.el (gnus-treat-hide-citation-maybe): Add more doc to the
	string.

	* plstore.el (plstore--get-buffer): Silence compiler warnings by
	renaming function arguments from `this'.

	* gnus-sum.el (gnus-newsgroup-recent): Removed.

	* gnus-spec.el (gnus-lrm-string-p): `bidi-string-mark-left-to-right'
	has been renamed.
	(gnus-lrm-string-p): Include RLM and PDF, too.

	* gnus-int.el (gnus-open-server): Make the "denied" message clearer
	(bug#9225).

2011-09-10  Eli Zaretskii  <eliz@gnu.org>

	Add autoload cookies for functions used by sendmail.el.
	* mm-encode.el (mm-default-file-encoding): Add autoload cookie.

	* mml.el (mml-to-mime, mml-attach-file): Add autoload cookies.

2011-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-date-ut): Work properly even when there are
	things like Date header in the body; work for forwarded parts.

2011-09-05  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-sum.el (gnus-summary-exit): Ensure we kill the proper
	original-article-buffer.

2011-09-05  Kan-Ru Chen  <kanru@kanru.info>

	* nnir.el (nnir-compose-result): Fix matching of server type.
	(nnir-run-swish++): Ditto.
	(nnir-run-namazu): Ditto.
	(nnir-run-notmuch): Ditto.

2011-09-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-home-directory): Add warning about setting in .gnus.el
	(bug#9405).

	* gnus-score.el (gnus-summary-increase-score): Doc clarification
	(bug#9421).

	* gnus-spec.el (gnus-face-0): Make all the face specs into defcustoms
	(bug#9425).

	* gnus-art.el (gnus-treatment-function-alist): Remove CRs as the first
	thing (bug#9426).

2011-09-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection-1): Use the correct port number in
	the error message.

2011-09-02  Eli Zaretskii  <eliz@gnu.org>

	* message.el (message-setup-1): Return t (Bug#9392).

2011-09-01  Andrew Cohen  <cohen@andy.bu.edu>