@@ -1,6 +1,7 @@
 2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus.texi: Remove mentions of `recent', which are now obsolete.
+	(Interactive): Document `quiet'.
 
 2011-07-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
